# cuda_code

./: element_wise.cu  globalMemary.cu  sharedMemary.cu  sumOneArray.cu  test.py
assembler/: compile.sh  modify.py  modify_compile.py  run.sh  test  test.cu  test.sm_70.cuasm
atomic/: atomic.cu
compile/: x.cu  y.cu
cp_async/: log  log.ncu-rep  test  test.cu
dp/: dp.cu  error.cu  test
elementwise/: Profile.h  baseline.cu  baseline.ncu-rep  oneflow.cu  test
flash_attention/: readme.md
gemm/: CMakeLists.txt  baseline.cu  cublas.cu  op1  op1.cu  op2  op2.cu  op2.cubin  op2.txt  op3  op3.cu  op3.cubin  other  other.cu  sass  test
gemm/report/: op2_log.ncu-rep  op3_log.ncu-rep  other_log.ncu-rep
gmem/: log  log.ncu-rep  makefile  test  test.cu
gragh/: graph.cu
ldmatrix/: log  log.ncu-rep  makefile  test  test.cu
mem/: float4.cu  global.cu  shared.cu
mma/: mma.cu  test
nccl/: makefile  test  test.cu
overview/: b.ncu-rep  b_1024.ncu-rep  float4.ncu-rep  float4_1024.ncu-rep  log  log.ncu-rep  makefile  op1.ncu-rep  reduce.cu  reduce_async.cu  reduce_no4.cu  test
pipe_utilization/: log  log.ncu-rep  makefile  test  test.cu
reduce/: CMakeLists.txt  baseline.cu  op1.cu  op2.cu  op3.cu  op4.cu  op5  op5.cu  op5.ncu-rep  op5_640.ncu-rep  test.cu  test.sh
scan/: brent-kung.cu  cub_warp.cu  kogge-stone.cu  ptx  sklansky.cu  test.sh  warp.cu
smem/: log  log.ncu-rep  makefile  test  test.cu
stream/: graph.cu  loop.cu  test  test.cu
test/: ptx  ptx_ciccO0  ptx_ptxasO0  sass  sass_ciccO0  sass_ptxasO0  test  test.cu  test.ncu-rep
thread/: test  (+1 more)
(+66 files in other folders)
